tests/NormalTests/paczka1/small_fuzzy/55055832.err
Error in line 4: a01ikMm A465 17,56
Error in line 5: W4H8omBQOAO A465 22,8
